--- a/dns.conf.example
+++ b/dns.conf.example
@@ -1,4 +1,1 @@
-A .*reddit.* 8.8.8.8
-TXT .* HELLO
-AAAA lulz.com 2607:f8b0:4006:807::100e
-A .*rebind.* 1.1.1.1 2.2.2.2
+A .*xunlei.com 1.2.3.4 2.3.4.4
